--- a/WebApps/XaUser/src/Makefile
+++ b/WebApps/XaUser/src/Makefile
@@ -24,7 +24,7 @@ ifeq ($(UNAME_S),Darwin)
 endif
 
 #User OBJ
-OBJ=$(OBJDIR)Controller.o $(OBJDIR)XaUserRole.o \
+OBJ=$(OBJDIR)Controller.o $(OBJDIR)XaRbacRole.o \
     $(OBJDIR)XaOu.o $(OBJDIR)XaOuType.o $(OBJDIR)XaUser.o \
     $(OBJDIR)XaUserAddressGeo.o $(OBJDIR)XaUserAddressGeoType.o \
     $(OBJDIR)XaUserAddressMail.o $(OBJDIR)XaUserAddressMailType.o \
@@ -51,8 +51,8 @@ print-varialbes:
 #COMPILE
 $(OBJDIR)Controller.o: Controller.cpp
 	$(CPP) -c Controller.cpp -o $(OBJDIR)Controller.o $(CPPFLAGS)
-$(OBJDIR)XaUserRole.o: XaUserRole.cpp
-	$(CPP) -c XaUserRole.cpp -o $(OBJDIR)XaUserRole.o $(CPPFLAGS)
+$(OBJDIR)XaRbacRole.o: XaRbacRole.cpp
+	$(CPP) -c XaRbacRole.cpp -o $(OBJDIR)XaRbacRole.o $(CPPFLAGS)
 $(OBJDIR)XaOuType.o: XaOuType.cpp
 	$(CPP) -c XaOuType.cpp -o $(OBJDIR)XaOuType.o $(CPPFLAGS)
 $(OBJDIR)XaOu.o: XaOu.cpp
