--- a/WebApps/XaUser/src/Makefile
+++ b/WebApps/XaUser/src/Makefile
@@ -24,8 +24,9 @@ ifeq ($(UNAME_S),Darwin)
 endif
 
 #User OBJ
-OBJ=$(OBJDIR)Controller.o $(OBJDIR)XaRbacRole.o \
-    $(OBJDIR)XaOu.o $(OBJDIR)XaOuType.o $(OBJDIR)XaUser.o \
+OBJ=$(OBJDIR)Controller.o \
+    $(OBJDIR)XaOu.o $(OBJDIR)XaOuType.o $(OBJDIR)XaUser.o $(OBJDIR)XaUserType.o\
+    $(OBJDIR)XaRbacRole.o \
     $(OBJDIR)XaUserAddressGeo.o $(OBJDIR)XaUserAddressGeoType.o \
     $(OBJDIR)XaUserAddressMail.o $(OBJDIR)XaUserAddressMailType.o \
     $(OBJDIR)XaUserAddressPhone.o $(OBJDIR)XaUserAddressPhoneCode.o $(OBJDIR)XaUserAddressPhoneType.o
@@ -51,14 +52,16 @@ print-varialbes:
 #COMPILE
 $(OBJDIR)Controller.o: Controller.cpp
 	$(CPP) -c Controller.cpp -o $(OBJDIR)Controller.o $(CPPFLAGS)
-$(OBJDIR)XaRbacRole.o: XaRbacRole.cpp
-	$(CPP) -c XaRbacRole.cpp -o $(OBJDIR)XaRbacRole.o $(CPPFLAGS)
 $(OBJDIR)XaOuType.o: XaOuType.cpp
 	$(CPP) -c XaOuType.cpp -o $(OBJDIR)XaOuType.o $(CPPFLAGS)
 $(OBJDIR)XaOu.o: XaOu.cpp
 	$(CPP) -c XaOu.cpp -o $(OBJDIR)XaOu.o $(CPPFLAGS)
 $(OBJDIR)XaUser.o: XaUser.cpp
 	$(CPP) -c XaUser.cpp -o $(OBJDIR)XaUser.o $(CPPFLAGS)
+$(OBJDIR)XaUserType.o: XaUserType.cpp
+	$(CPP) -c XaUserType.cpp -o $(OBJDIR)XaUserType.o $(CPPFLAGS)
+$(OBJDIR)XaRbacRole.o: XaRbacRole.cpp
+	$(CPP) -c XaRbacRole.cpp -o $(OBJDIR)XaRbacRole.o $(CPPFLAGS)
 $(OBJDIR)XaUserAddressGeo.o: XaUserAddressGeo.cpp
 	$(CPP) -c XaUserAddressGeo.cpp -o $(OBJDIR)XaUserAddressGeo.o $(CPPFLAGS)
 $(OBJDIR)XaUserAddressGeoType.o: XaUserAddressGeoType.cpp
