--- a/WebApps/XaUserUi/src/Makefile
+++ b/WebApps/XaUserUi/src/Makefile
@@ -25,7 +25,7 @@ endif
 
 #User OBJ
 OBJ=$(OBJDIR)Controller.o $(OBJDIR)XaPages.o $(OBJDIR)XaOuTypeUi.o $(OBJDIR)XaOuUi.o $(OBJDIR)XaUserUi.o $(OBJDIR)XaUserTypeUi.o \
-    $(OBJDIR)XaRbacRoleUi.o \
+    $(OBJDIR)XaRbacRoleUi.o $(OBJDIR)XaRbacRoleRXaUserUi.o \
     $(OBJDIR)XaUserAddressGeoTypeUi.o $(OBJDIR)XaUserAddressMailTypeUi.o $(OBJDIR)XaUserAddressPhoneCodeUi.o $(OBJDIR)XaUserAddressPhoneTypeUi.o \
     $(OBJDIR)XaUserAddressMailUi.o $(OBJDIR)XaUserAddressPhoneUi.o $(OBJDIR)XaUserAddressGeoUi.o
 
@@ -60,6 +60,8 @@ $(OBJDIR)XaUserUi.o: XaUserUi.cpp
 	$(CPP) -c XaUserUi.cpp -o $(OBJDIR)XaUserUi.o $(CPPFLAGS)
 $(OBJDIR)XaUserTypeUi.o: XaUserTypeUi.cpp
 	$(CPP) -c XaUserTypeUi.cpp -o $(OBJDIR)XaUserTypeUi.o $(CPPFLAGS)
+$(OBJDIR)XaRbacRoleRXaUserUi.o: XaRbacRoleRXaUserUi.cpp
+	$(CPP) -c XaRbacRoleRXaUserUi.cpp -o $(OBJDIR)XaRbacRoleRXaUserUi.o $(CPPFLAGS)
 $(OBJDIR)XaRbacRoleUi.o: XaRbacRoleUi.cpp
 	$(CPP) -c XaRbacRoleUi.cpp -o $(OBJDIR)XaRbacRoleUi.o $(CPPFLAGS)
 $(OBJDIR)XaUserAddressGeoTypeUi.o: XaUserAddressGeoTypeUi.cpp
