--- a/web/XaUserAdmin/config.json
+++ b/web/XaUserAdmin/config.json
@@ -1,5 +1,7 @@
 {
     "MyApp" : {
+        
+        "ApiPath":"/XAllegro/Xaas/XaLibPhp",
         "name":"Xaas User Admin",
         "style":"default",
         "LogoutPage":"Logout.php",
